# onco-analytics-on-fhir

./: .bandit.yml  .checkov.yml  .dockerignore  .editorconfig  .gitattributes  .gitignore  .lychee.toml  .mega-linter.yml  .release-please-manifest.json  .renovaterc.json  .trivyignore  .yamllint  CHANGELOG.md  Dockerfile  LICENSE  README.md  SECURITY.md  Taskfile.yaml  aof.README.md  build-air-gapped-installer.sh  import-images-into-k3s.sh  load_multisite_specific_data_single_dataset_template.py  load_multisite_specific_data_template.py  load_multisite_specific_data_with_build_sarcoma_entity_template.py  main.py  mock-data.ndjson  pyproject.toml  pyrightconfig.json  release-please-config.json  renovate.json  ruff.toml  setup.py
.github/workflows/: check-links.yaml  ci.yaml  lint-pr-title.yaml  mega-linter.yaml  release-please.yaml  release.yaml  schedule.yaml  scorecard.yaml
analytics_on_fhir/: ATC GKV-AI 2026.xlsx  Umsetzungsleitfaden_Substanzen_2025-08_Gruppen_Prof.Wullich.csv  aml.py  aml_counts.py  aml_de_identify.py  dq.py  embark_rwd.py  extract_all_obds.py  fhir_constants.py  fix_sap_medikation.py  icd_codes_aml.csv  main.py  metastasis_analysis.R  mii_conditions_labs.py  plot.py  plot_aml_timelines.py  settings.py  study_protocol_d.py  study_protocol_d_utils.py  study_protocol_pca1.py  study_protocol_pca_utils.py  utils.py  views.py
analytics_on_fhir/aml/: README.md  prepare_cato_export.py  prepare_zenzy_export.py
analytics_on_fhir/analysis/: nomogram.R
analytics_on_fhir/rwd_cohort_plots/: survival.py  survival_utils.py
charts/diz-in-a-box/: .helmignore  Chart.yaml  README.md  (+3 more)
docker-compose/: .demo.env  .env  README.md  anonymization-demo.yaml  anonymization.yaml  compose.adtfhir-to-opal.yaml  compose.analytics-on-fhir.yaml  compose.decompose-xmls.yaml  compose.fhir-server.yaml  compose.fhir-to-delta.yaml  compose.full.yaml  compose.kafka.yaml  compose.load-demo-mii-bundles.yaml  compose.local-test.yaml  compose.obds-fhir-to-opal.yaml  compose.obds-to-fhir.yaml  compose.onkoadt-to-fhir.yaml  compose.overrides.obds-to-fhir-from-directory.yaml  compose.pathling.yaml  compose.pseudonymization.yaml  compose.trino.yaml  deploy-connectors.sh  kafka-connect-passwords.properties  onkostar-db-connector.json  save-images.sh  spark-defaults.conf
docs/: index.html
k8s/: kafka-bridge.yaml  kafka-cluster.yaml  strimzi-values.yaml
src/analytics_on_fhir/: .dockerignore  .gitignore  Dockerfile  README.md  embark_rwd.py  main.py  pyproject.toml  settings.py  utils.py
src/analytics_on_fhir/analytics_on_fhir/: embark_rwd.py  fhir_uc_aml.py  icd_codes_aml.csv  main.py  settings.py  study_protocol_d.py  study_protocol_d_utils.py  study_protocol_pca1.py  study_protocol_pca_utils.py  utils.py
src/analytics_on_fhir/analytics_on_fhir/.spark/checkpoints/0502bee4-46b8-420c-bc8d-99485c49591a/rdd-1344/: .part-00017.crc
src/analytics_on_fhir/tests/: test_embark_rwd.py
src/analytics_on_fhir/tests/__snapshots__/: test_embark_rwd.ambr
src/analytics_on_fhir/tests/fixtures/fhir/: map_withGivenObds_shouldCreateBundleMatchingSnapshot.Testpatient_1.xml.0.approved.fhir.json
tests/: conftest.py  test_embark_rwd.py
(+143 files in other folders)
