[project]
name = "analytics_on_fhir"
version = "0.1.0"
description = "Analytics on FHIR"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "pathling==9.2.0",
    "delta-spark==4.0.0",
    "typed-settings[cattrs]==25.3.0",
    "loguru==0.7.3",
    "graphviz==0.21",
    "pandas>=2.1",
    "pyarrow>=14",
    "polars>=0.20",
    "matplotlib>=3.8",
    "seaborn>=0.13",
    "plotly>=5.18",
    "statsmodels>=0.14",
    "lifelines>=0.27",
    "openpyxl>=3.1",
    "xlsxwriter>=3.1",
    "aws>=0.2.5",
]

[dependency-groups]
dev = [
    "pytest>=9,<10",
    "pytest-cov>=7,<8",
    "ruff>=0.14,<0.16",
    "syrupy>=5,<6",
]

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]
