[project]
name = "analytics_on_fhir"
version = "0.1.0"
description = "Analytics on FHIR"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pathling==9.3.1",
    "delta-spark==4.0.0",
    "typed-settings[cattrs,dotenv]==25.3.0",
    "loguru==0.7.3",
    "graphviz==0.21",
    "pandas==2.3.3",
    "polars==1.38.1",
    "matplotlib==3.10.8",
    "seaborn==0.13.2",
    "plotly==6.5.2",
    "statsmodels==0.14.6",
    "lifelines==0.30.1",
    "openpyxl==3.1.5",
    "xlsxwriter==3.2.9",
    "fhir-pyrate==0.2.3",
    "more-itertools==10.8.0"
]

[dependency-groups]
dev = [
    "pytest==9.0.2",
    "pytest-cov==7.0.0",
    "ruff==0.15.1",
    "syrupy==5.1.0",
    "jupyter==1.1.1",
    "ipykernel==7.2.0",
]

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]

[tool.ruff]
line-length = 100
