[project]
name = "analytics_on_fhir"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pathling==9.1.0",
    "delta-spark==4.0.0",
    "typed-settings[attrs]==25.3.0",
    "loguru==0.7.3",
    "graphviz==0.21",
]

[dependency-groups]
dev = [
    "pytest==9.0.2",
    "pytest-cov==7.0.0",
    "ruff==0.14.8",
    "syrupy==5.0.0",
]

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]
